Source/WTF: Fix StringView misplaced implementations after r181525 and r181558 https://bugs.webkit.org/show_bug.cgi?id=142772

Reviewed by Darin Adler.

Fix misplaced implementations in StringView::startsWithIgnoringASCIICase and
StringView::endsWith.

Add some tests in [1] to cover the StringView::startsWith,
StringView::startsWithIgnoringASCIICase, StringView::endsWith and
StringView::endsWithIgnoringASCIICase implementations.

[1] Tools/TestWebKitAPI/Tests/WTF/StringView.cpp.

* wtf/text/StringView.cpp:
(WTF::StringView::startsWithIgnoringASCIICase):
(WTF::StringView::endsWith):
(WTF::StringView::endsWithIgnoringASCIICase):

Tools:
Fix StringView typos after r181525 and r181558
https://bugs.webkit.org/show_bug.cgi?id=142772

Reviewed by Darin Adler.

Add some tests in [1] to cover the StringView::startsWith,
StringView::startsWithIgnoringASCIICase, StringView::endsWith and
StringView::endsWithIgnoringASCIICase implementations.

* TestWebKitAPI/Tests/WTF/StringView.cpp:
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/160869@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181717 268f45cc-cd09-0410-ab3c-d52691b4dbfc